--- a/30style.css
+++ b/30style.css
@@ -1,22 +1,36 @@
+/* header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.avatar{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: aqua;
+} */
 h1{
     display: inline;
     vertical-align: middle;
 }
+
 .avatar{
-    display: inline;
-}
-.avatar img{
-    width: 75px;
-    height: 75px;
+    padding: 30px;
     border-radius: 50%;
+    background-color: aqua;
+    display: inline-block;
     vertical-align: middle;
+    float: right;
 }
+
 table{
-    border-collapse: collapse;
+    border-collapse: collapse; 
 }
+
 td,th{
     border: solid black 1px;
 }
+
 #idlab{
     vertical-align: top;
 }
